Add typing code block

--- a/src/posts/2019-07-02-code-review-experience/index.mdx
+++ b/src/posts/2019-07-02-code-review-experience/index.mdx
@@ -7,6 +7,9 @@ title: "5 or 6 ways to design a Code Review ✨ Experience ✨"
 import InfoBlock from "../../components/info-block";
 import GoodCommitHistory from "./good-commit-history";
 import CommitMessageTemplate from "./commit-message-template";
+import GitAddPatch from "./git-add-patch";
+
+<GitAddPatch />
 
 As a pull request (PR) author, it’s great to structure your PR in a way that’s easy for reviewers to review.
 
@@ -504,6 +507,8 @@ Once I’ve updated all my commit messages, it’s time to move on to opening th
 ## Pull request creation
 
 I like to keep the description brief because [I have a theory that most people don’t really read them](https://en.wikipedia.org/wiki/Banner_blindness). I prefer sticking to one-liners, bullet points and screenshots:
+
+![](./pull-request-description.png)
 
 ```
 Center images before cropping
