Improve typingCodeBlock styling

--- a/src/posts/2019-07-02-code-review-experience/index.mdx
+++ b/src/posts/2019-07-02-code-review-experience/index.mdx
@@ -73,7 +73,11 @@ The technique involves resetting my entire commit history and starting over. I r
 
 Afterward, it will look like I made all of my changes, but haven’t actually committed anything.
 
+git status:
+
 <ResetAndPatch />
+
+git diff:
 
 <ResetAndPatchDiff />
 
