--- a/src/posts/2019-07-02-code-review-experience/commit-message-template.mdx
+++ b/src/posts/2019-07-02-code-review-experience/commit-message-template.mdx
@@ -22,7 +22,7 @@ _Same thing here. Consider if this could be a code comment._
 
 ##### Resources
 
-Consider if you can add any links to this commit message. Examples include:
+Consider if you can add any links to this commit message (or code comment). Examples include:
 
 - A recent commit that caused the regression
 - A design mockup or screenshot
