Improve mobile width for terminal headers

--- a/src/posts/2019-07-02-code-review-experience/good-commit-history.mdx
+++ b/src/posts/2019-07-02-code-review-experience/good-commit-history.mdx
@@ -1,4 +1,4 @@
-#### ℹ️ What does a good commit history look like?
+#### What does a good commit history look like?
 
 I find that my individual commits often don’t map to individual files—they instead involve small related chunks across multiple files.
 
