Add a heading to commit messages post
so that I can anchor-link to this nifty component thing ;)

--- a/src/posts/2019-07-02-code-review-experience/index.mdx
+++ b/src/posts/2019-07-02-code-review-experience/index.mdx
@@ -87,6 +87,8 @@ I have no commit history now, so I need to re-commit my changes. Before I do tha
   <GoodCommitHistory />
 </InfoBlock>
 
+#### Staging only _some_ changes
+
 Following those guidelines, I’ll need to stage only _some_ changes from any given file. I like to use:
 
 - `git add -p` (or `--patch`)
